Converted to PIP because I want it that way

--- a/config_RENAME.ini
+++ b/config_RENAME.ini
@@ -1,4 +1,5 @@
-TOKEN_YADISK = -----------------
+[SETTING]
+TOKEN_YADISK = ----------
 PATH_BACKUP_DIR = /home
 NAME_BACKUP_DIR_CLOUD = BACKUP
 PATH_TEMP_DIR = /home
