--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "yabackup_v2"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+requests = "^2.31.0"
+tqdm = "^4.66.0"
+yadisk = "^1.3.3"
 
 
 [build-system]
